deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-session-ext
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: moodle-session-ext
