deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-session-ext-ingress
spec:
  rules:
    - host: moodle-session-ext.dcnick3.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle-session-ext
                port:
                  number: 80
  tls:
    - hosts:
        - moodle-session-ext.dcnick3.me
